[metadata]
name = bms_token
version = 2.1.0
author = Zack Didcott
summary = BMS Token - OATHController Python implementation with C# wrapper.

[options]
packages =
  bms_token
  bms_token.cli
  bms_token.controller
  bms_token.controller.wrapper
  bms_token.db
  bms_token.gui
  bms_token.token
include_package_data = true
python_requires = >= 3.10
install_requires =
  PyQt5

[options.extras_require]
wrapper =
  pythonnet
tests =
  pytest
  pytest-cov
dev =
  black
  build
  flake8
  isort
  mypy

[options.entry_points]
console_scripts =
  bms-token-cli = bms_token.cli.__main__:main
gui_scripts =
  bms-token-gui = bms_token.gui.__main__:main
